--- a/papers.html
+++ b/papers.html
@@ -98,7 +98,7 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">On this page</h2>
    
   <ul>
-  <li><a href="#pre-prints" id="toc-pre-prints" class="nav-link active" data-scroll-target="#pre-prints">Pre-prints</a></li>
+  <li><a href="#preprints" id="toc-preprints" class="nav-link active" data-scroll-target="#preprints">Preprints</a></li>
   <li><a href="#online-resources" id="toc-online-resources" class="nav-link" data-scroll-target="#online-resources">Online resources</a></li>
   <li><a href="#posters" id="toc-posters" class="nav-link" data-scroll-target="#posters">Posters</a></li>
   <li><a href="#publications" id="toc-publications" class="nav-link" data-scroll-target="#publications">Publications</a>
@@ -111,6 +111,7 @@ ul.task-list li input[type="checkbox"] {
   </ul></li>
   <li><a href="#technical-reports" id="toc-technical-reports" class="nav-link" data-scroll-target="#technical-reports">Technical reports</a></li>
   <li><a href="#media" id="toc-media" class="nav-link" data-scroll-target="#media">Media</a></li>
+  <li><a href="#awards" id="toc-awards" class="nav-link" data-scroll-target="#awards">Awards</a></li>
   </ul>
 </nav>
     </div>
@@ -120,10 +121,11 @@ ul.task-list li input[type="checkbox"] {
 
 
 
-<section id="pre-prints" class="level1">
-<h1>Pre-prints</h1>
+<section id="preprints" class="level1">
+<h1>Preprints</h1>
 <p><strong>Steyn, N.</strong>, &amp; Parag, K. V. Robust uncertainty quantification in popular estimators of the instantaneous reproduction number. <em>medRxiv preprint</em>. <a href="https://doi.org/10.1101/2024.10.22.24315918">https://doi.org/10.1101/2024.10.22.24315918</a></p>
 <p><strong>Steyn, N.</strong>, Parag, K. V., &amp; Donnelly, C. A. A primer on inference and prediction with epidemic renewal models using sequential Monte Carlo methods. <a href="https://github.com/nicsteyn2/SMCforRt/blob/main/workingpaper.pdf">Link to PDF</a></p>
+<p><strong>Steyn, N.</strong>, Unwin, H. J. T., Ponmattam, J., et al.&nbsp;Regional and national estimates of children affected by all-cause and COVID-19-associated orphanhood and caregiver death in Brazil, by age and family circumstance. <em>medRxiv preprint</em>. <a href="https://doi.org/10.1101/2025.01.31.25321479">https://doi.org/10.1101/2025.01.31.25321479</a></p>
 </section>
 <section id="online-resources" class="level1">
 <h1>Online resources</h1>
@@ -212,6 +214,10 @@ ul.task-list li input[type="checkbox"] {
 <p>Plank, M. J., James, A., Lustig, A., <strong>Steyn, N.</strong>, Binny, R. N., &amp; Hendy, S. C. How New Zealand could keep eliminating coronavirus at its border for months to come, even as the global pandemic worsens. <em>The Conversation.</em> 16 July 2020. <a href="https://theconversation.com/how-new-zealand-could-keep-eliminating-coronavirus-at-its-border-for-months-to-come-even-as-the-global-pandemic-worsens-142368">Link</a></p>
 <p>Plank, M. J., James, A., Lustig, A., <strong>Steyn, N.</strong>, Binny, R. N., &amp; Hendy, S. C. 2 new COVID-19 cases in New Zealand, but elimination of community transmission still stands. <em>The Conversation.</em> 16 June 2020. <a href="https://theconversation.com/2-new-covid-19-cases-in-new-zealand-but-elimination-of-community-transmission-still-stands-140843">Link</a></p>
 <p>Plank, M. J., James, A., Lustig, A., <strong>Steyn, N.</strong>, Binny, R. N., &amp; Hendy, S. C. New Zealand hits a 95% chance of eliminating coronavirus – but we predict new cases will emerge. <em>The Conversation.</em> 4 June 2020. <a href="https://theconversation.com/new-zealand-hits-a-95-chance-of-eliminating-coronavirus-but-we-predict-new-cases-will-emerge-139973">Link</a></p>
+</section>
+<section id="awards" class="level1">
+<h1>Awards</h1>
+<p><a href="https://pmscienceprizes.org.nz"><strong>Prime Minister’s Science Prize</strong></a>. 2020. Awarded for a “transformative scientific discovery or achievement” with a significant impact on New Zealand. This was awarded for our work on modelling during the COVID-19 pandemic in New Zealand.</p>
 
 
 </section>
@@ -644,7 +650,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 });
 </script>
 </div> <!-- /content -->
-<script>var lightboxQuarto = GLightbox({"selector":".lightbox","closeEffect":"zoom","openEffect":"zoom","loop":false,"descPosition":"bottom"});
+<script>var lightboxQuarto = GLightbox({"closeEffect":"zoom","loop":false,"openEffect":"zoom","selector":".lightbox","descPosition":"bottom"});
 (function() {
   let previousOnload = window.onload;
   window.onload = () => {
