updated paper list

--- a/papers.html
+++ b/papers.html
@@ -126,11 +126,13 @@ ul.task-list li input[type="checkbox"] {
 <p><strong>Steyn, N.</strong>, &amp; Parag, K. V. Robust uncertainty quantification in popular estimators of the instantaneous reproduction number. <em>medRxiv preprint</em>. <a href="https://doi.org/10.1101/2024.10.22.24315918">https://doi.org/10.1101/2024.10.22.24315918</a></p>
 <p><strong>Steyn, N.</strong>, Parag, K. V., &amp; Donnelly, C. A. A primer on inference and prediction with epidemic renewal models using sequential Monte Carlo methods. <a href="https://github.com/nicsteyn2/SMCforRt/blob/main/workingpaper.pdf">Link to PDF</a></p>
 <p><strong>Steyn, N.</strong>, Unwin, H. J. T., Ponmattam, J., et al.&nbsp;Regional and national estimates of children affected by all-cause and COVID-19-associated orphanhood and caregiver death in Brazil, by age and family circumstance. <em>medRxiv preprint</em>. <a href="https://doi.org/10.1101/2025.01.31.25321479">https://doi.org/10.1101/2025.01.31.25321479</a></p>
+<p><strong>Steyn, N.</strong>, Chadeau-Hyam, M., Whitaker, M., et al.&nbsp;Pandemic-risk-related behaviour change in England from June 2020 to March 2022: REACT-1 study among over 2 million people. <em>medRxiv preprint</em>. <a href="https://doi.org/10.1101/2025.03.03.25323250">https://doi.org/10.1101/2025.03.03.25323250</a></p>
 </section>
 <section id="online-resources" class="level1">
 <h1>Online resources</h1>
 <p><a href="https://nicsteyn2.github.io/SMCforRt/">SMC and epidemic renewal models</a>: an online “book” demonstrating sequential Monte Carlo methods for fitting epidemic renewal models. Accompanies <em>A primer on inference and prediction with epidemic renewal models using sequential Monte Carlo methods</em>.</p>
 <p><a href="https://nicsteyn2.github.io/RobustRtEstimators/">Rt estimators in Julia</a>: short vignettes accompanying the code provided in the <a href="https://github.com/nicsteyn2/RobustRtEstimators">GitHub repository</a> for <em>Robust uncertainty quantification in popular estimators of the instantaneous reproduction number</em>. Provides Julia implementation of EpiEstim and EpiFilter, as well as the corresponding parameter fitting methodology developed in the paper.</p>
+<p><a href="https://m-whit-ic.shinyapps.io/react-social-shiny/">Pandemic-risk-related behavioural data portal</a>: an R shiny server hosting a large quantity of aggregated data on pandemic-risk-related behaviours in England, collected as part of the REACT-1 study. By making these data publicly available, we hope to enable further research. Methodology can be found in our <a href="https://doi.org/10.1101/2025.03.03.25323250">preprint</a>.</p>
 </section>
 <section id="posters" class="level1">
 <h1>Posters</h1>
@@ -650,7 +652,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 });
 </script>
 </div> <!-- /content -->
-<script>var lightboxQuarto = GLightbox({"closeEffect":"zoom","loop":false,"openEffect":"zoom","selector":".lightbox","descPosition":"bottom"});
+<script>var lightboxQuarto = GLightbox({"closeEffect":"zoom","descPosition":"bottom","loop":false,"selector":".lightbox","openEffect":"zoom"});
 (function() {
   let previousOnload = window.onload;
   window.onload = () => {
