--- a/papers.html
+++ b/papers.html
@@ -121,11 +121,12 @@ ul.task-list li input[type="checkbox"] {
   <li><a href="#posters" id="toc-posters" class="nav-link" data-scroll-target="#posters">Posters</a></li>
   <li><a href="#publications" id="toc-publications" class="nav-link" data-scroll-target="#publications">Publications</a>
   <ul class="collapse">
-  <li><a href="#section" id="toc-section" class="nav-link" data-scroll-target="#section">2024</a></li>
-  <li><a href="#section-1" id="toc-section-1" class="nav-link" data-scroll-target="#section-1">2023</a></li>
-  <li><a href="#section-2" id="toc-section-2" class="nav-link" data-scroll-target="#section-2">2022</a></li>
-  <li><a href="#section-3" id="toc-section-3" class="nav-link" data-scroll-target="#section-3">2021</a></li>
-  <li><a href="#section-4" id="toc-section-4" class="nav-link" data-scroll-target="#section-4">2020</a></li>
+  <li><a href="#section" id="toc-section" class="nav-link" data-scroll-target="#section">2025</a></li>
+  <li><a href="#section-1" id="toc-section-1" class="nav-link" data-scroll-target="#section-1">2024</a></li>
+  <li><a href="#section-2" id="toc-section-2" class="nav-link" data-scroll-target="#section-2">2023</a></li>
+  <li><a href="#section-3" id="toc-section-3" class="nav-link" data-scroll-target="#section-3">2022</a></li>
+  <li><a href="#section-4" id="toc-section-4" class="nav-link" data-scroll-target="#section-4">2021</a></li>
+  <li><a href="#section-5" id="toc-section-5" class="nav-link" data-scroll-target="#section-5">2020</a></li>
   </ul></li>
   <li><a href="#technical-reports" id="toc-technical-reports" class="nav-link" data-scroll-target="#technical-reports">Technical reports</a></li>
   <li><a href="#media" id="toc-media" class="nav-link" data-scroll-target="#media">Media</a></li>
@@ -183,23 +184,27 @@ ul.task-list li input[type="checkbox"] {
 <section id="publications" class="level1">
 <h1>Publications</h1>
 <section id="section" class="level3">
-<h3 class="anchored" data-anchor-id="section">2024</h3>
-<p>Watson, L. M., Plank, M. J., Armstrong, B. A., Chapman, J. R., Hewitt, J., Morris, H., Orsi, A., Bunce, M., Donnelly, C. A., &amp; <strong>Steyn, N</strong>. (2024). Jointly estimating epidemiological dynamics of Covid-19 from case and wastewater data in Aotearoa New Zealand. <em>Communications Medicine</em>. <a href="https://doi.org/10.1038/s43856-024-00570-3">https://doi.org/10.1038/s43856-024-00570-3</a></p>
+<h3 class="anchored" data-anchor-id="section">2025</h3>
+<p>Ogi-Gittins, I., <strong>Steyn, N.</strong>, Polonsky, J., Hart, W. S., Keita, M., Ahuka-Mundeke, S., Hill, E. M., &amp; Thompson, R. N. (2025). Simulation-based inference of the time-dependent reproduction number from temporally aggregated and under-reported disease incidence time series data. <em>Philosophical Transactions of the Royal Society A</em>. <a href="https://royalsocietypublishing.org/doi/10.1098/rsta.2024.0412">http://doi.org/10.1098/rsta.2024.0412</a></p>
 </section>
 <section id="section-1" class="level3">
-<h3 class="anchored" data-anchor-id="section-1">2023</h3>
+<h3 class="anchored" data-anchor-id="section-1">2024</h3>
+<p>Watson, L. M., Plank, M. J., Armstrong, B. A., Chapman, J. R., Hewitt, J., Morris, H., Orsi, A., Bunce, M., Donnelly, C. A., &amp; <strong>Steyn, N</strong>. (2024). Jointly estimating epidemiological dynamics of Covid-19 from case and wastewater data in Aotearoa New Zealand. <em>Communications Medicine</em>. <a href="https://doi.org/10.1038/s43856-024-00570-3">https://doi.org/10.1038/s43856-024-00570-3</a></p>
+</section>
+<section id="section-2" class="level3">
+<h3 class="anchored" data-anchor-id="section-2">2023</h3>
 <p>Binny, R. N., Priest, P., French, N. P., Parry, M., Lustig, A., Hendy, S. C., Maclaren, O. J., Ridings, K. M., <strong>Steyn, N.</strong>, Vattiato, G., &amp; Plank, M. J. (2023). Sensitivity of Reverse Transcription Polymerase Chain Reaction Tests for Severe Acute Respiratory Syndrome Coronavirus 2 Through Time. <em>The Journal of Infectious Diseases</em>. <a href="https://doi.org/10.1093/infdis/jiac317">https://doi.org/10.1093/infdis/jiac317</a></p>
 <p>Elliott, P., Whitaker, M., Tang, D., Eales, O., <strong>Steyn, N.</strong>, Bodinier, B., Wang, H., Elliott, J., Atchison, C., Ashby, D., Barclay, W., Taylor, G., Darzi, A., Cooke, G. S., Ward, H., Donnelly, C. A., Riley, S., &amp; Chadeau-Hyam, M. (2023). Design and Implementation of a National SARS-CoV-2 Monitoring Program in England: REACT-1 Study. <em>American Journal of Public Health</em>. <a href="https://doi.org/10.2105/AJPH.2023.307230">https://doi.org/10.2105/AJPH.2023.307230</a></p>
 </section>
-<section id="section-2" class="level3">
-<h3 class="anchored" data-anchor-id="section-2">2022</h3>
+<section id="section-3" class="level3">
+<h3 class="anchored" data-anchor-id="section-3">2022</h3>
 <p>Elliott, P., Eales, O., <strong>Steyn, N.</strong>, Tang, D., Bodinier, B., Wang, H., Elliott, J., Whitaker, M., Atchison, C., Diggle, P. J., Page, A. J., Trotter, A. J., Ashby, D., Barclay, W., Taylor, G., Ward, H., Darzi, A., Cooke, G. S., Donnelly, C. A., &amp; Chadeau-Hyam, M. (2022). Twin peaks: the Omicron SARS-CoV-2 BA. 1 and BA. 2 epidemics in England. <em>Science</em>. <a href="https://doi.org/10.1126/science.abq4411">https://doi.org/10.1126/science.abq4411</a></p>
 <p>Plank, M. J., James, A., Lustig, A., <strong>Steyn, N.</strong>, Binny, R. N., &amp; Hendy, S. C. (2022). Potential reduction in transmission of COVID-19 by digital contact tracing systems: a modelling study. <em>Mathematical Medicine and Biology</em>. <a href="https://doi.org/10.1093/imammb/dqac002">https://doi.org/10.1093/imammb/dqac002</a></p>
 <p><strong>Steyn, N.</strong>, Lustig, A., Hendy, S. C., Binny, R. N., &amp; Plank, M. J. (2022). Effect of vaccination, border testing, and quarantine requirements on the risk of COVID-19 in New Zealand: A modelling study. <em>Infectious Disease Modelling</em>. <a href="https://doi.org/10.1016/j.idm.2021.12.006">https://doi.org/10.1016/j.idm.2021.12.006</a></p>
 <p><strong>Steyn, N.</strong>, Plank, M. J., Binny, R. N., Hendy, S. C., Lustig, A., &amp; Ridings, K. (2022). A COVID-19 vaccination model for Aotearoa New Zealand. <em>Scientific Reports</em> <a href="https://doi.org/10.1038/s41598-022-06707-5">https://doi.org/10.1038/s41598-022-06707-5</a></p>
 </section>
-<section id="section-3" class="level3">
-<h3 class="anchored" data-anchor-id="section-3">2021</h3>
+<section id="section-4" class="level3">
+<h3 class="anchored" data-anchor-id="section-4">2021</h3>
 <p>Hendy, S., <strong>Steyn, N.</strong>, James, A., Plank, M. J., Hannah, K., Binny, R. N., &amp; Lustig, A. (2021). Mathematical modelling to inform New Zealand’s COVID-19 response. <em>Journal of the Royal Society of New Zealand</em>. <a href="https://doi.org/10.1080/03036758.2021.1876111">https://doi.org/10.1080/03036758.2021.1876111</a></p>
 <p>James, A., Plank, M. J., Hendy, S., Binny, R., Lustig, A., <strong>Steyn, N.</strong>, Nesdale, A., &amp; Verrall, A. (2021). Successful contact tracing systems for COVID-19 rely on effective quarantine and isolation. <em>PLoS One</em>. <a href="https://doi.org/10.1371/journal.pone.0252499">https://doi.org/10.1371/journal.pone.0252499</a></p>
 <p><strong>Steyn, N.</strong>, Binny, R. N., Hannah, K., Hendy, S., James, A., Lustig, A., Ridings, K., Plank, M. J., &amp; Sporle, A. (2021). Māori and Pacific People in New Zealand have higher risk of hospitalisation for COVID-19. <em>New Zealand Medical Journal</em>. <a href="https://nzmj.org.nz/media/pages/journal/vol-134-no-1538/maori-and-pacific-people-in-new-zealand-have-a-higher-risk-of-hospitalisation-for-covid-19/55602a1fe7-1696476650/maori-and-pacific-people-in-new-zealand-have-a-higher-risk-of-hospitalisation-for-covid-19-open-access.pdf">Link to PDF</a></p>
@@ -209,8 +214,8 @@ ul.task-list li input[type="checkbox"] {
 <p>Plank, M., James, A., &amp; <strong>Steyn, N.</strong> (2021). Comment: weekly COVID-19 testing with household quarantine and contact tracing is feasible and would probably end the epidemic<a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a>. <em>Royal Society Open Science</em>. <a href="https://doi.org/10.1098/rsos.201546">https://doi.org/10.1098/rsos.201546</a></p>
 <p>James, A., Plank, M. J., Hendy, S., Binny, R. N., Lustig, A., &amp; <strong>Steyn, N.</strong> (2021). Model-free estimation of COVID-19 transmission dynamics from a complete outbreak. <em>PLOS ONE</em>. <a href="https://doi.org/10.1371/journal.pone.0238800">https://doi.org/10.1371/journal.pone.0238800</a></p>
 </section>
-<section id="section-4" class="level3">
-<h3 class="anchored" data-anchor-id="section-4">2020</h3>
+<section id="section-5" class="level3">
+<h3 class="anchored" data-anchor-id="section-5">2020</h3>
 <p><strong>Steyn, N.</strong>, Binny, R. N., Hannah, K., Hendy, S., James, A., Kukutai, T., Lustig, A., McLeod, M., Plank, M. J., Ridings, K., &amp; Sporle, A. (2020). Estimated inequities in COVID-19 infection fatality rates by ethnicity for Aotearoa New Zealand. <em>New Zealand Medical Journal</em>. <a href="https://nzmj.org.nz/media/pages/journal/vol-133-no-1521/estimated-inequities-in-covid-19-infection-fatality-rates-by-ethnicity-for-aotearoa-new-zealand/9bb9847717-1696476126/estimated-inequities-in-covid-19-infection-fatality-rates-by-ethnicity-for-aotearoa-new-zealand-open-access.pdf">Link to PDF</a></p>
 </section>
 </section>
