added bioinference talk

--- a/papers.html
+++ b/papers.html
@@ -118,7 +118,7 @@ ul.task-list li input[type="checkbox"] {
   <ul>
   <li><a href="#preprints" id="toc-preprints" class="nav-link active" data-scroll-target="#preprints">Preprints</a></li>
   <li><a href="#online-resources" id="toc-online-resources" class="nav-link" data-scroll-target="#online-resources">Online resources</a></li>
-  <li><a href="#posters" id="toc-posters" class="nav-link" data-scroll-target="#posters">Posters</a></li>
+  <li><a href="#talks-and-posters" id="toc-talks-and-posters" class="nav-link" data-scroll-target="#talks-and-posters">Talks and posters</a></li>
   <li><a href="#publications" id="toc-publications" class="nav-link" data-scroll-target="#publications">Publications</a>
   <ul class="collapse">
   <li><a href="#section" id="toc-section" class="nav-link" data-scroll-target="#section">2025</a></li>
@@ -154,26 +154,34 @@ ul.task-list li input[type="checkbox"] {
 <p><a href="https://nicsteyn2.github.io/RobustRtEstimators/">Rt estimators in Julia</a>: short vignettes accompanying the code provided in the <a href="https://github.com/nicsteyn2/RobustRtEstimators">GitHub repository</a> for <em>Robust uncertainty quantification in popular estimators of the instantaneous reproduction number</em>. Provides Julia implementation of EpiEstim and EpiFilter, as well as the corresponding parameter fitting methodology developed in the paper.</p>
 <p><a href="https://m-whit-ic.shinyapps.io/react-social-shiny/">Pandemic-risk-related behavioural data portal</a>: an R shiny server hosting a large quantity of aggregated data on pandemic-risk-related behaviours in England, collected as part of the REACT-1 study. By making these data publicly available, we hope to enable further research. Methodology can be found in our <a href="https://doi.org/10.1101/2025.03.03.25323250">preprint</a>.</p>
 </section>
-<section id="posters" class="level1">
-<h1>Posters</h1>
+<section id="talks-and-posters" class="level1">
+<h1>Talks and posters</h1>
 <div style="max-width: 600px; margin: 1 auto;">
 <div>
 
 </div>
-<div class="quarto-layout-panel" data-layout-ncol="2">
+<div class="quarto-layout-panel" data-layout-ncol="3">
 <div class="quarto-layout-row">
-<div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: flex-start;">
+<div class="quarto-layout-cell" style="flex-basis: 33.3%;justify-content: flex-start;">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><a href="../files/posters/idm_poster_2024.png" class="lightbox" data-gallery="quarto-lightbox-gallery-1" title="Presented at IDM 2024. Download here."><img src="../files/posters/idm_poster_2024.png" class="img-fluid figure-img" alt="Presented at IDM 2024. Download here."></a></p>
+<p><a href="../files/bioinference.png" class="lightbox" data-gallery="quarto-lightbox-gallery-1" title="Presented at Bioinference 2025. Download here. I was awarded the best talk by an early career researcher for this presentation."><img src="../files/bioinference.png" class="img-fluid figure-img" alt="Presented at Bioinference 2025. Download here. I was awarded the best talk by an early career researcher for this presentation."></a></p>
+<figcaption>Presented at Bioinference 2025. Download <a href="../files/bioinference.pdf">here</a>. I was awarded the <strong>best talk by an early career researcher</strong> for this presentation.</figcaption>
+</figure>
+</div>
+</div>
+<div class="quarto-layout-cell" style="flex-basis: 33.3%;justify-content: flex-start;">
+<div class="quarto-figure quarto-figure-center">
+<figure class="figure">
+<p><a href="../files/posters/idm_poster_2024.png" class="lightbox" data-gallery="quarto-lightbox-gallery-2" title="Presented at IDM 2024. Download here."><img src="../files/posters/idm_poster_2024.png" class="img-fluid figure-img" alt="Presented at IDM 2024. Download here."></a></p>
 <figcaption>Presented at IDM 2024. Download <a href="../files/posters/idm_poster_2024.pdf">here</a>.</figcaption>
 </figure>
 </div>
 </div>
-<div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: flex-start;">
+<div class="quarto-layout-cell" style="flex-basis: 33.3%;justify-content: flex-start;">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><a href="../files/posters/epidemics_poster_2023.png" class="lightbox" data-gallery="quarto-lightbox-gallery-2" title="Presented at EPIDEMICS 2023. Download here."><img src="../files/posters/epidemics_poster_2023.png" class="img-fluid figure-img" alt="Presented at EPIDEMICS 2023. Download here."></a></p>
+<p><a href="../files/posters/epidemics_poster_2023.png" class="lightbox" data-gallery="quarto-lightbox-gallery-3" title="Presented at EPIDEMICS 2023. Download here."><img src="../files/posters/epidemics_poster_2023.png" class="img-fluid figure-img" alt="Presented at EPIDEMICS 2023. Download here."></a></p>
 <figcaption>Presented at EPIDEMICS 2023. Download <a href="../files/posters/epidemics_poster_2023.pdf">here</a>.</figcaption>
 </figure>
 </div>
