--- a/papers.html
+++ b/papers.html
@@ -116,7 +116,8 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">On this page</h2>
    
   <ul>
-  <li><a href="#preprints" id="toc-preprints" class="nav-link active" data-scroll-target="#preprints">Preprints</a></li>
+  <li><a href="#recent-publications" id="toc-recent-publications" class="nav-link active" data-scroll-target="#recent-publications">Recent publications</a></li>
+  <li><a href="#preprints" id="toc-preprints" class="nav-link" data-scroll-target="#preprints">Preprints</a></li>
   <li><a href="#online-resources" id="toc-online-resources" class="nav-link" data-scroll-target="#online-resources">Online resources</a></li>
   <li><a href="#talks-and-posters" id="toc-talks-and-posters" class="nav-link" data-scroll-target="#talks-and-posters">Talks and posters</a></li>
   <li><a href="#publications" id="toc-publications" class="nav-link" data-scroll-target="#publications">Publications</a>
@@ -140,9 +141,14 @@ ul.task-list li input[type="checkbox"] {
 
 
 
+<section id="recent-publications" class="level1">
+<h1>Recent publications</h1>
+<p><strong>Steyn, N.</strong>, &amp; Parag, K. V. (2025). Robust uncertainty quantification in popular estimators of the instantaneous reproduction number. <em>American Journal of Epidemiology</em>. <a href="https://doi.org/10.1093/aje/kwaf165">https://doi.org/10.1093/aje/kwaf165</a></p>
+<p>Ogi-Gittins, I., <strong>Steyn, N.</strong>, Polonsky, J., Hart, W. S., Keita, M., Ahuka-Mundeke, S., Hill, E. M., &amp; Thompson, R. N. (2025). Simulation-based inference of the time-dependent reproduction number from temporally aggregated and under-reported disease incidence time series data. <em>Philosophical Transactions of the Royal Society A</em>. <a href="https://royalsocietypublishing.org/doi/10.1098/rsta.2024.0412">http://doi.org/10.1098/rsta.2024.0412</a></p>
+<p><em>A complete list of publications can be found lower on this page.</em></p>
+</section>
 <section id="preprints" class="level1">
 <h1>Preprints</h1>
-<p><strong>Steyn, N.</strong>, &amp; Parag, K. V. (2025). Robust uncertainty quantification in popular estimators of the instantaneous reproduction number. <em>Accepted at American Journal of Epidemiology</em>. Preprint accessible here: <a href="https://doi.org/10.1101/2024.10.22.24315918">https://doi.org/10.1101/2024.10.22.24315918</a></p>
 <p><strong>Steyn, N.</strong>, Parag, K. V., Thompson, R. N., &amp; Donnelly, C. A. (2025). A primer on inference and prediction with epidemic renewal models using sequential Monte Carlo methods. <em>Accepted at Statistics in Medicine</em>. Preprint accessible here: <a href="https://doi.org/10.48550/arXiv.2503.18875">https://doi.org/10.48550/arXiv.2503.18875</a></p>
 <p><strong>Steyn, N.</strong>, Chadeau-Hyam, M., Elliott, P., &amp; Donnelly, C. A. (2025). Bayesian modelling of repeated cross-sectional epidemic prevalence survey data. <em>medRxiv preprint</em>. <a href="https://doi.org/10.1101/2025.04.16.25325936">https://doi.org/10.1101/2025.04.16.25325936</a></p>
 <p><strong>Steyn, N.</strong>, Unwin, H. J. T., Ponmattam, J., et al.&nbsp;(2025). Regional and national estimates of children affected by all-cause and COVID-19-associated orphanhood and caregiver death in Brazil, by age and family circumstance. <em>medRxiv preprint</em>. <a href="https://doi.org/10.1101/2025.01.31.25321479">https://doi.org/10.1101/2025.01.31.25321479</a></p>
@@ -194,6 +200,7 @@ ul.task-list li input[type="checkbox"] {
 <h1>Publications</h1>
 <section id="section" class="level3">
 <h3 class="anchored" data-anchor-id="section">2025</h3>
+<p><strong>Steyn, N.</strong>, &amp; Parag, K. V. (2025). Robust uncertainty quantification in popular estimators of the instantaneous reproduction number. <em>American Journal of Epidemiology</em>. <a href="https://doi.org/10.1093/aje/kwaf165">https://doi.org/10.1093/aje/kwaf165</a></p>
 <p>Ogi-Gittins, I., <strong>Steyn, N.</strong>, Polonsky, J., Hart, W. S., Keita, M., Ahuka-Mundeke, S., Hill, E. M., &amp; Thompson, R. N. (2025). Simulation-based inference of the time-dependent reproduction number from temporally aggregated and under-reported disease incidence time series data. <em>Philosophical Transactions of the Royal Society A</em>. <a href="https://royalsocietypublishing.org/doi/10.1098/rsta.2024.0412">http://doi.org/10.1098/rsta.2024.0412</a></p>
 </section>
 <section id="section-1" class="level3">
